<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="10">

    <ImageView
        android:id="@+id/driver_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:src="@drawable/road" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:gravity="center_vertical"
            android:text="@string/driver_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/driver_name_trip_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:gravity="center"
            android:text="Mahmoud" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:gravity="center_vertical"
            android:text="@string/driver_phone"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/driver_phone_trip_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:gravity="center"
            android:text="01270791661" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:gravity="center_vertical"
            android:text="@string/trip_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/trip_name_trip_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:gravity="center"
            android:text="School" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:gravity="center_vertical"
            android:text="Description"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/trip_description_trip_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:gravity="center"
            android:text="This trip is for my school, but i dont like school" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25"></LinearLayout>
</LinearLayout>
