<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="10"
    android:padding="10dp">
    <!-- youes add the activity context here -->

    <ImageView
        android:id="@+id/user_photo_profile"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:src="@drawable/user" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:gravity="center_vertical"
            android:text="Name"
            android:textStyle="bold"

            />


        fe both bas fel ldanscae<EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:gravity="center"
            android:hint="Enter your name"
            android:id="@+id/user_name_profile"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:gravity="center_vertical"
            android:text="@string/phone_number"
            android:textStyle="bold"

            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:gravity="center"
            android:inputType="phone"
            android:id="@+id/user_phone_profile"
            android:hint="@string/enter_your_phone"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:gravity="center_vertical"
            android:text="Ringing Mode"
            android:textStyle="bold"

            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".2"></LinearLayout>


        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:id="@+id/ringing_mode_profile"
            android:weightSum="1"
            android:padding="5dp"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Call"
                android:layout_weight="0.5"
                android:id="@+id/call_profile"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/notification_profile"
                android:layout_width="wrap_content"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="Notification"/>
        </RadioGroup>


    </LinearLayout>

    <Button
        android:id="@+id/reg_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@drawable/blue_btn_background"
        android:padding="10dp"
        android:text="@string/save"
        android:textColor="#ffffff"
        android:textSize="@dimen/abc_action_bar_progress_bar_size" />
</LinearLayout>
